<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menu_sort"
        android:orderInCategory="100"
        android:title="@string/sort"
        app:showAsAction="never">
        <menu>
            <item
                android:id="@+id/menu_song_sort_az"
                android:title="@string/sort_az" />
            <item
                android:id="@+id/menu_song_sort_za"
                android:title="@string/sort_za" />
            <item
                android:id="@+id/menu_song_sort_artist"
                android:title="@string/sort_artist" />
            <item
                android:id="@+id/menu_song_sort_album"
                android:title="@string/sort_album" />
            <item
                android:id="@+id/menu_song_sort_duration"
                android:title="@string/sort_duration" />
        </menu>
    </item>
</menu>