<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <!-- 内容 -->
    <FrameLayout
        android:id="@+id/fl_content"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <!-- 底部TAB -->
    <RadioGroup
        android:id="@+id/radio_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/color_title"
        android:elevation="10dp"
        android:orientation="horizontal"
        tools:ignore="UnusedAttribute">

        <RadioButton
            android:id="@+id/rb_home"
            style="@style/tab_main_style"
            android:drawableTop="@drawable/ic_tab_home"
            android:text="@string/home"
            android:textColor="@color/text_color_home" />

        <RadioButton
            android:id="@+id/rb_news"
            style="@style/tab_main_style"
            android:drawableTop="@drawable/ic_tab_news"
            android:text="@string/news"
            android:textColor="@color/text_color_news" />

        <RadioButton
            android:id="@+id/rb_book"
            style="@style/tab_main_style"
            android:drawableTop="@drawable/ic_tab_book"
            android:text="@string/book"
            android:textColor="@color/text_color_book" />

        <RadioButton
            android:id="@+id/rb_music"
            style="@style/tab_main_style"
            android:drawableTop="@drawable/ic_tab_music"
            android:text="@string/music"
            android:textColor="@color/text_color_music" />

        <RadioButton
            android:id="@+id/rb_movie"
            style="@style/tab_main_style"
            android:drawableTop="@drawable/ic_tab_movie"
            android:text="@string/movie"
            android:textColor="@color/text_color_movie" />
    </RadioGroup>
</LinearLayout>