<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.codearms.maoqiqi.one.view.StatusBarView
        android:id="@+id/status_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/color_navigation" />

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/color_navigation"
        android:theme="@style/toolbar_theme"
        app:contentInsetStartWithNavigation="0dp"
        app:navigationIcon="@drawable/ic_back"
        app:popupTheme="@style/navigation_popup_theme"
        app:title="@string/scan_code"
        app:titleTextAppearance="@style/toolbar_appearance" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/sixteen"
            android:background="@drawable/bg_hint"
            android:lineSpacingExtra="2dp"
            android:padding="@dimen/sixteen"
            android:text="@string/download_content"
            android:textColor="@color/color_content_general"
            android:textSize="@dimen/text_size_small" />

        <ImageView
            android:id="@+id/iv_code"
            android:layout_width="220dp"
            android:layout_height="220dp"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/thirty_two"
            android:background="@color/color_title"
            android:contentDescription="@string/image_description"
            android:padding="@dimen/eight"
            android:src="@drawable/ic_code" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/thirty_two"
            android:gravity="center_horizontal"
            android:lineSpacingExtra="2dp"
            android:padding="@dimen/sixteen"
            android:text="@string/star_content"
            android:textColor="@color/text_color_gray"
            android:textSize="@dimen/text_size_small" />
    </LinearLayout>
</LinearLayout>