<?xml version="1.0" encoding="utf-8"?>
<com.codearms.maoqiqi.one.view.DetailView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/detail_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:expanded_text="@string/movie_detail">

    <!--只能有一个子View-->
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/iv_bg"
                android:layout_width="match_parent"
                android:layout_height="353dp"
                android:background="@drawable/bg_shadow_mask"
                android:contentDescription="@string/image_description" />

            <ImageView
                android:id="@+id/iv_movie"
                android:layout_width="156dp"
                android:layout_height="240dp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="97dp"
                android:contentDescription="@string/image_description"
                android:scaleType="fitXY"
                android:src="@drawable/ic_movie_placeholder"
                android:transitionName="@string/transition_movie_img"
                tools:ignore="UnusedAttribute" />
        </RelativeLayout>

        <FrameLayout
            android:id="@+id/fl_content"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </LinearLayout>
</com.codearms.maoqiqi.one.view.DetailView>