<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/twenty_four">

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/user_name"
        android:textColorHint="@color/color_text_secondary"
        app:hintTextAppearance="@style/text_input_layout_hint">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_input"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:paddingTop="@dimen/eight"
            android:paddingBottom="@dimen/eight"
            android:singleLine="true"
            android:textColor="@color/color_text_main"
            android:textColorHighlight="@color/color_input_highlight"
            android:textCursorDrawable="@drawable/text_cursor_drawable"
            android:textSize="@dimen/text_size_normal" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/sixteen"
        android:hint="@string/password"
        android:textColorHint="@color/color_text_secondary"
        app:hintTextAppearance="@style/text_input_layout_hint">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/sixteen"
            android:background="@drawable/bg_input"
            android:imeActionLabel="@string/login"
            android:imeOptions="actionNext"
            android:inputType="textPassword"
            android:maxLength="16"
            android:maxLines="1"
            android:paddingTop="@dimen/eight"
            android:paddingBottom="@dimen/eight"
            android:singleLine="true"
            android:textColor="@color/color_text_main"
            android:textColorHighlight="@color/color_input_highlight"
            android:textCursorDrawable="@drawable/text_cursor_drawable"
            android:textSize="@dimen/text_size_normal" />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/btn_register"
        style="?android:buttonBarButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:background="@drawable/bg_btn"
        android:enabled="false"
        android:minHeight="40dp"
        android:text="@string/register"
        android:textColor="@color/color_text_title"
        android:textSize="@dimen/text_size_normal"
        android:textStyle="bold" />

    <!--style="?android:buttonBarButtonStyle":去除Button默认阴影效果-->

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <Button
        style="@style/btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/registration_agreement"
        android:textColor="@color/text_color_gray"
        android:textSize="@dimen/text_size_smaller" />
</LinearLayout>