<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".navigation.activity.DonateActivity">

    <com.codearms.maoqiqi.one.view.StatusBarView
        android:id="@+id/status_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/color_navigation" />

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/color_navigation"
        android:theme="@style/toolbar_theme"
        app:contentInsetStartWithNavigation="0dp"
        app:navigationIcon="@drawable/ic_back"
        app:popupTheme="@style/navigation_popup_theme"
        app:title="@string/donate"
        app:titleTextAppearance="@style/toolbar_appearance" />

    <RadioGroup
        android:id="@+id/radio_group"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/thirty_two"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/rb_ali_pay"
            android:layout_width="0dp"
            android:layout_height="@dimen/thirty_two"
            android:layout_weight="1"
            android:background="@drawable/bg_ali_pay"
            android:button="@null"
            android:checked="true"
            android:gravity="center"
            android:text="@string/ali_pay"
            android:textColor="@color/selector_ali_pay"
            android:textSize="@dimen/text_size_normal" />

        <RadioButton
            android:id="@+id/rb_wx_pay"
            android:layout_width="0dp"
            android:layout_height="@dimen/thirty_two"
            android:layout_weight="1"
            android:background="@drawable/bg_wx_pay"
            android:button="@null"
            android:gravity="center"
            android:text="@string/wx_pay"
            android:textColor="@color/selector_wx_pay"
            android:textSize="@dimen/text_size_normal" />
    </RadioGroup>

    <ImageView
        android:id="@+id/iv_pay"
        android:layout_width="wrap_content"
        android:layout_height="400dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/sixteen"
        android:contentDescription="@string/image_description"
        android:scaleType="centerInside"
        android:src="@drawable/ic_ali_pay" />
</LinearLayout>